<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.purdue.PavementPatchingTracker.GPSLoggerFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewVehicleTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text=""
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textViewCktStateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/pptraker_state"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textViewCktState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/ckt_state_initializing"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/time_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />

                <TextView
                    android:id="@+id/textViewLatGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/lat_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />

                <TextView
                    android:id="@+id/textViewLonGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/lon_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />

                <TextView
                    android:id="@+id/textViewAltitudeGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/altitude_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />

                <TextView
                    android:id="@+id/textViewSpeedGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/speed_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />

                <TextView
                    android:id="@+id/textViewBearingGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/bearing_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />

                <TextView
                    android:id="@+id/textViewAccuracyGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gps_attributes_margin_bottom"
                    android:layout_marginLeft="@dimen/gps_attributes_margin_left"
                    android:text="@string/accuracy_gps_text_view_default"
                    android:textSize="@dimen/gps_attributes_font_size" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewTicket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@android:drawable/toast_frame" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonTakePicture"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/truck_take_a_picture"
            android:onClick="takePicture"
            android:text="@string/truck_take_a_picture"
            android:textSize="40sp" />

        <Button
            android:id="@+id/ButtonChangeKartUnloadingState"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/kart_not_unloading"
            android:onClick="changePPTrackerSpreadingState"
            android:text="@string/pptracker_not_spreading"
            android:textSize="50sp" />

    </LinearLayout>

</FrameLayout>
